--- a/assets/styles/components/_meta.scss
+++ b/assets/styles/components/_meta.scss
@@ -3,6 +3,7 @@
   text-align: center;
   padding: 1rem; //standardise pls (with liveblog)
   margin-right: $baseline/2;
+
 }
 
 .meta__booths,
@@ -13,9 +14,6 @@
   margin: 0;
   padding: 0;
   font-size: $fontsize3;
-  @media (min-width: $medium) {
-    font-size: $fontsize4;
-  }
 }
 
 .meta__smalltext {
