--- a/assets/styles/components/_tabs.scss
+++ b/assets/styles/components/_tabs.scss
@@ -7,6 +7,7 @@
   padding: 0;
   display:flex;
   flex-direction: horizontal;
+  max-width: 100%;
   & :first-child {
     border-right: 0;
   }
@@ -20,6 +21,7 @@
   list-style: none;
   border: 1px solid $brand-grey;
   padding: $baseline/2;
+  box-sizing: border-box;
 }
 
 .tabs__tab--current {
